--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -136,9 +136,10 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="2dp"
                         android:text="Chọn cửa hàng"
-                        android:visibility="visible"
                         android:textColor="@color/colorGray"
-                        android:textSize="15sp" />
+                        android:textSize="15sp"
+                        android:visibility="visible" />
+
                     <Spinner
                         android:id="@+id/spinnercuahangbill"
                         android:layout_width="match_parent"
@@ -146,9 +147,9 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="2dp"
                         android:text="Alpha Coffee 1"
-                        android:visibility="gone"
                         android:textColor="@color/colorBlack"
-                        android:textSize="10sp" />
+                        android:textSize="10sp"
+                        android:visibility="gone" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -215,6 +216,7 @@
                         android:textSize="12sp" />
 
                     <EditText
+                        android:paddingLeft="10dp"
                         android:id="@+id/edtghichubill"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
@@ -225,9 +227,9 @@
                         android:background="@drawable/custom_border_simple"
                         android:hint="..."
                         android:inputType="text"
-                        android:padding="10dp"
-                        android:textColorHint="@color/colorSilver"
+                        android:textColor="@color/colorBlack"
                         android:textSize="12sp" />
+
                 </LinearLayout>
             </LinearLayout>
 
