Lịch sử hóa đơn (Khách Hàng)

--- a/app/src/main/res/layout/fragment_billall.xml
+++ b/app/src/main/res/layout/fragment_billall.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="5dp"
+        android:visibility="visible"
         android:id="@+id/rvbillhistoryall"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </androidx.recyclerview.widget.RecyclerView>
-</LinearLayout>
+    <TextView
+        android:id="@+id/tvthongbaobillall"
+        android:layout_marginTop="50dp"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Không có đơn nào"
+        android:visibility="gone"
+        android:textStyle="italic"
+        android:textColor="@color/colorSilver"
+        />
+</FrameLayout>
