--- a/app/src/main/res/layout/item_bill.xml
+++ b/app/src/main/res/layout/item_bill.xml
@@ -7,7 +7,7 @@
     android:layout_marginBottom="5dp">
 
     <LinearLayout
-        android:layout_margin="5dp"
+        android:padding="5dp"
         android:background="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -60,25 +60,21 @@
                 android:text="Ngày tạo"/>
         </LinearLayout>
         <View
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/colorSilver"/>
         <RelativeLayout
+            android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv"
-                android:layout_marginBottom="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
 
             <TextView
                 android:layout_marginBottom="5dp"
                 android:layout_alignParentLeft="true"
-                android:layout_below="@+id/rv"
                 android:textStyle="bold"
                 android:textSize="12sp"
                 android:textColor="@color/colorBlack"
@@ -89,7 +85,6 @@
                 android:id="@+id/tvtongtienbillhistory"
                 android:layout_marginBottom="5dp"
                 android:layout_alignParentRight="true"
-                android:layout_below="@+id/rv"
                 android:textStyle="bold"
                 android:textSize="12sp"
                 android:textColor="@color/colorBlack"
